hkj-checker: stop flagging code that cannot act on the advice (#695)
* hkj-checker: stop flagging code that cannot act on the advice

Every HKJ check is advice its reader is expected to act on, but two
categories of code were being diagnosed with advice they could not
follow.

Generated sources. The plugin scanned every compilation unit, so
migration-nudge told @EffectAlgebra's generated *Ops class to use the
generated *Ops smart constructors, and @ComposeEffects' generated
Support class to use @ComposeEffects. 23 such warnings across this
repo's own examples; a project promoting the check with
severity:migration-nudge=error could not compile at all. Types annotated
org.higherkindedj.optics.annotations.Generated are now skipped whole,
wherever they sit in their file and including anything nested inside.

Only HKJ's own marker gates this. javax/jakarta @Generated are not
honoured: JaCoCo excludes any type carrying an annotation named
Generated, so those markers are routinely hand-applied to hand-written
code, and honouring them would let a coverage marker silently switch off
every check on a file.

The layer the nudge recommends. migration-nudge fires on Free.liftF and
Free.suspend, which hkj-core's own smart-constructor and fluent layers
must call -- including FreePath.liftF and FreeFactory, the two APIs the
message names. There was no way to accept those: disable= is
project-wide and no check consulted @SuppressWarnings. A class, method
or variable now opts out with @SuppressWarnings("<check-id>"), or out of
every check with @SuppressWarnings("hkj-checker"). Suppression resolves
through the element model rather than annotation syntax, accumulates
outward-in, is per check, and ends with the declaration that carried it.
javac's blanket "all" is deliberately not honoured: it is too common on
legacy and generated code for a silent switch-off to be safe.

Scanning is now per analysed type rather than per compilation unit.
javac fires one ANALYZE event per top-level type